--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,9 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   
-  # For downloading video files
+  # For downloading and handling video files
   http: ^1.1.1
   path_provider: ^2.1.1
+  video_player: ^2.8.1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   integration_test:
