--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
     sdk: flutter
   web: ^1.1.1
   plugin_platform_interface: ^2.1.8
+  http: ^1.1.0
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  video_player: ^2.7.2
+  permission_handler: ^10.4.5
 
 dev_dependencies:
   flutter_test:
