--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage:
 
 environment:
   sdk: ^3.6.0
-  flutter: '>=3.3.0'
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
@@ -14,11 +14,10 @@ dependencies:
     sdk: flutter
   web: ^1.1.1
   plugin_platform_interface: ^2.1.8
-  http: ^1.1.0
-  path_provider: ^2.1.1
-  path: ^1.8.3
-  video_player: ^2.7.2
-  permission_handler: ^10.4.5
+  http: ^1.3.0
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  video_player: ^2.9.3
 
 dev_dependencies:
   flutter_test:
