--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,79 +1,92 @@
+# Package metadata
+# Name should be lowercase with underscores for word separation
 name: moon_native
-description: "A new Flutter plugin project."
+
+# Concise description of what the plugin does
+description: "A Flutter plugin for video trimming across multiple platforms."
+
+# Semantic versioning: major.minor.patch
 version: 0.0.1
-homepage:
 
+# Website for this package (replace with actual URL)
+homepage: "https://example.com/moon_native"
+
+# Source code repository URL (replace with actual URL)
+repository: "https://github.com/example/moon_native"
+
+# Environment constraints
+# These define the versions of Dart and Flutter required
 environment:
-  sdk: ^3.6.0
-  flutter: ">=3.3.0"
+  sdk: ^3.6.0        # Dart SDK version constraint
+  flutter: ">=3.3.0"  # Flutter SDK version constraint
 
+# Dependencies required for this package
 dependencies:
+  # Flutter SDK dependencies - core Flutter packages
   flutter:
-    sdk: flutter
+    sdk: flutter     # The Flutter framework itself
   flutter_web_plugins:
-    sdk: flutter
-  web: ^1.1.1
-  plugin_platform_interface: ^2.1.8
-  http: ^1.3.0
-  path_provider: ^2.1.5
-  path: ^1.9.0
-  video_player: ^2.9.3
+    sdk: flutter     # Support for web platform plugins
+  # Plugin infrastructure dependencies
+  plugin_platform_interface: ^2.1.8  # Base classes for platform interfaces
+  web: ^1.1.1                        # Web platform support
+  
+  # Dependencies used by the test widget implementation
+  # These aren't needed for the core plugin functionality but support the demo UI
+  http: ^1.3.0            # For making HTTP requests to download videos
+  path_provider: ^2.1.5   # For accessing device file system directories
+  path: ^1.9.0            # For path manipulation operations
+  video_player: ^2.9.3    # For video playback and metadata extraction
 
+# Development-only dependencies (not included in published package)
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  flutter_lints: ^5.0.0
-  mocktail: ^1.0.4
+    sdk: flutter     # Flutter's testing framework
+  flutter_lints: ^5.0.0  # Lint rules for good coding practices
+  mocktail: ^1.0.4       # Mocking framework for unit tests
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+# Flutter-specific configuration
+# This section is used by the Flutter tool to understand the plugin structure
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
-  # which should be registered in the plugin registry. This is required for
-  # using method channels.
-  # The Android 'package' specifies package in which the registered class is.
-  # This is required for using method channels on Android.
-  # The 'ffiPlugin' specifies that native code should be built and bundled.
-  # This is required for using `dart:ffi`.
-  # All these are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
+  # Plugin configuration - tells Flutter this is a plugin package
+  # The values below define how the plugin integrates with each supported platform:
+  #  - 'pluginClass' is the native class that registers with the plugin registry
+  #  - 'package' (for Android) is the Java/Kotlin package containing the plugin class
+  #  - 'fileName' (for web) is the source file containing the plugin implementation
+  #
+  # These values are used by the Flutter tools to generate the right platform-specific
+  # integration code for each supported platform.
+  # Plugin platform integrations
   plugin:
+    # Define supported platforms and their integration details
     platforms:
+      # Android platform integration
       android:
-        package: com.example.moon_native
-        pluginClass: MoonNativePlugin
+        package: com.example.moon_native   # Java/Kotlin package name
+        pluginClass: MoonNativePlugin      # Native plugin class name
+      
+      # iOS platform integration
       ios:
-        pluginClass: MoonNativePlugin
-      linux:
-        pluginClass: MoonNativePlugin
+        pluginClass: MoonNativePlugin      # Swift/Objective-C plugin class name
+      
+      # macOS platform integration
       macos:
-        pluginClass: MoonNativePlugin
-      windows:
-        pluginClass: MoonNativePluginCApi
+        pluginClass: MoonNativePlugin      # Swift/Objective-C plugin class name
+      
+      # Web platform integration
       web:
-        pluginClass: MoonNativeWeb
-        fileName: moon_native_web.dart
+        pluginClass: MoonNativeWeb         # JavaScript plugin class name
+        fileName: moon_native_web.dart     # Dart file containing web implementation
 
-  # To add assets to your plugin package, add an assets section, like this:
+    # If assets are needed for this plugin, uncomment and add them here:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/to/asset-from-package
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
+  #   - images/example.jpg
+  
+  # For more details on managing assets in Flutter packages, see:
+  # https://flutter.dev/docs/development/ui/assets-and-images
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
